--- a/css/style.css
+++ b/css/style.css
@@ -781,7 +781,7 @@ html.no-scroll, body.no-scroll {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.85);  /* TAMNA POZADINA */
-    background-image: url('assets/tvoja-pozadina.jpg');  /* Tvoja slika */
+    background-image: url('assets/background.jpg');  /* Tvoja slika */
     background-size: cover;
     background-position: center;
     display: flex;
