--- a/css/style.css
+++ b/css/style.css
@@ -774,5 +774,25 @@ html.no-scroll, body.no-scroll {
   height: 100vh;
 }
 //----------da slika iza bude i da bude zatamljeno---------------//
-
+#simple-lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* Postavljamo tvoju sliku u pozadini */
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('assets/background.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+#simple-lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    z-index: 1001;
+    box-shadow: 0 0 20px rgba(0,0,0,0.7); /* eventualno blagi shadow */
+}
 //--------------------------//
