--- a/css/style.css
+++ b/css/style.css
@@ -782,19 +782,24 @@ html.no-scroll, body.no-scroll {
 }
 //-------------------------//
 .social-links {
-    margin-top: 20px;
+    margin-top: 30px;
     text-align: center;
 }
 
 .social-links h3 {
-    margin-bottom: 10px;
-    font-size: 1.2rem;
+    margin-bottom: 15px;
+    font-size: 1.4rem;
 }
 
 .social-links a {
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 15px;
     transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.social-links a svg {
+    width: 50px;
+    height: 50px;
 }
 
 .social-links a:hover {
