--- a/css/style.css
+++ b/css/style.css
@@ -727,3 +727,29 @@ html.no-scroll, body.no-scroll {
   max-width: 720px;    /* da tekst ne bude preširok */
 }
 //------------------------//
+#simple-lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('assets/dark-bg.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column; /* caption ispod slike na mobile */
+    align-items: center;
+    justify-content: center;
+    z-index: 10000;
+    padding: 20px;
+    gap: 20px;
+}
+
+#simple-lightbox img {
+    max-width: 90%;
+    max-height: 85vh;
+    border-radius: 8px;
+    box-shadow: 0 0 25px #000;
+    z-index: 10001;
+}
+//------------------------//
