--- a/css/style.css
+++ b/css/style.css
@@ -859,41 +859,46 @@ html.no-scroll, body.no-scroll {
 }
 //------------------------//
 footer {
-  background-color: #111; /* tamna pozadina */
+  background-color: #0e0e0e;
   color: #ccc;
   padding: 30px 0;
+  font-size: 14px;
+  border-top: 2px solid #1f1f1f;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+}
+
+.footer-logo p {
+  margin: 5px 0;
   font-size: 14px;
 }
 
-.footer-content {
-  max-width: 1000px;
-  margin: 0 auto;
+.footer-logo .design {
+  color: #888;
+  font-style: italic;
+  font-size: 13px;
 }
 
-.footer-content p {
-  margin: 8px 0;
+.footer-socials {
+  margin-top: 15px;
 }
 
-.social-links {
-  margin: 10px 0;
-}
-
-.social-links a {
+.footer-socials a {
   color: #66ccff;
-  text-decoration: none;
-  margin: 0 8px;
+  margin: 0 10px;
+  font-size: 20px;
   transition: color 0.3s;
 }
 
-.social-links a:hover {
+.footer-socials a:hover {
   color: #ffffff;
-  text-decoration: underline;
-}
-
-.design {
-  font-style: italic;
-  color: #888;
-  font-size: 13px;
 }
 //---------------------///
