--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,8 @@ button:hover {
     transform: translateY(-50%);
     padding: 10px;
     transition: transform 0.2s;
+    z-index: 1100;  /* dodaj ovo */
+    padding: 20px; /* povećaj padding za bolje touch ciljeve */
 }
 
 #lightbox-prev {
