--- a/css/style.css
+++ b/css/style.css
@@ -452,12 +452,12 @@ button:hover {
 
 @media (max-width: 768px) {
   .lightbox-arrow {
-    font-size: 4rem;
+    font-size: 2,5rem;
     top: auto;
     bottom: 40px;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 50%;
-    padding: 10px 15px;
+    background: transparent;
+    border-radius: 0%;
+    padding: 5px 10px;
     transform: none;
   }
 
