--- a/css/style.css
+++ b/css/style.css
@@ -401,8 +401,12 @@ button:hover {
 #images-container img:hover {
   transform: scale(1.05);
 }
-
-
+@media (max-width: 768px) {
+  #images-container img {
+    max-width: 100px;   /* manje slike na telefonu */
+    height: 100px;
+  }
+}
 //-------------------------------//
 #simple-lightbox {
     position: fixed;
